# beastlybite

./: .gitignore  README.md  index.html  package.json  script.js  style.css
backend/: .env.example  requirements.txt
backend/app/: main.py
backend/app/agents/: base.py  coding_agent.py  coordinator.py  creative_agent.py  market_agent.py  memory_agent.py  planner.py  registry.py  research_agent.py  reviewer.py
backend/app/api/: chat.py  memory.py  projects.py  system.py  tools.py  trading.py  vision.py  voice.py  websocket.py
backend/app/core/: config.py  database.py  events.py  security.py
backend/app/memory/: manager.py  store.py
backend/app/models/: __init__.py  conversation.py  memory.py  project.py  trading.py
backend/app/providers/: base.py  gemini_provider.py  manager.py  model_registry.py  ollama_provider.py  openai_provider.py  quota_tracker.py  task_classifier.py
backend/app/tools/: base.py  desktop.py  file_tools.py  registry.py  terminal.py  web_tools.py
backend/app/trading/: backtester.py  market_data.py  paper_trading.py
backend/app/voice/: stt.py  tts.py  wake_word.py
frontend/: next.config.ts  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/hud/orb/: JayOrb.tsx
frontend/src/components/panels/ide/: IDEPanel.tsx
frontend/src/lib/: api.ts  websocket.ts
frontend/src/store/: index.ts
frontend/src/types/: index.ts
scripts/: install_models.ps1  install_models.py  install_models.sh  start.ps1  start.sh
src-tauri/: Cargo.toml  tauri.config.json
src-tauri/src/: main.rs
(+17 files in other folders)
