[package]
name = "jay"
version = "0.1.0"
description = "J.A.Y. — Just Assists You: Personal AI Operating System"
authors = ["J.A.Y."]
license = ""
repository = ""
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6", features = [
    "window-all",
    "system-tray",
    "global-shortcut-all",
    "notification-all",
    "shell-open",
] }

[features]
custom-protocol = ["tauri/custom-protocol"]
